<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <parent>
        <groupId>org.jboss</groupId>
        <artifactId>jboss-parent</artifactId>
        <version>35</version>
        <relativePath/>
    </parent>

    <modelVersion>4.0.0</modelVersion>

    <name>RESTEasy JAX-RS</name>
    <description>Resteasy</description>

    <groupId>org.jboss.resteasy</groupId>
    <artifactId>resteasy-jaxrs-all</artifactId>
    <version>3.15.8-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <!-- Dependency versions -->
        <dep.arquillian-bom.version>1.6.0.Final</dep.arquillian-bom.version>
        <version.org.jboss.arquillian.container.arquillian-weld-embedded>2.0.0.Final</version.org.jboss.arquillian.container.arquillian-weld-embedded>
        <version.org.wildfly.wildfly-arquillian-container-managed>2.1.1.Final</version.org.wildfly.wildfly-arquillian-container-managed>
        <version.org.wildfly.wildfly-arquillian-container-remote>2.1.1.Final</version.org.wildfly.wildfly-arquillian-container-remote>
        <version.org.wildfly.wildfly-arquillian-container-bootable>3.0.1.Final</version.org.wildfly.wildfly-arquillian-container-bootable>

        <jboss.home/>
        <!-- print logs to file by default -->
        <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
        <!-- Modularized JDK support (various workarounds) - activated via profile -->
        <modular.jdk.args/>
        <!-- maven-enforcer-plugin -->
        <maven.min.version>3.2.5</maven.min.version>
        <jdk.min.version>${maven.compiler.source}</jdk.min.version>
        <!-- maven-surefire-plugin -->
        <surefire.system.args>-Xms512m -Xmx512m ${modular.jdk.args}</surefire.system.args>
        <additionalJvmArgs/>
        <!-- Plugins versions -->
        <version.org.jacoco.plugin>0.7.9</version.org.jacoco.plugin>
        <version.org.wildfly.jar.plugin>2.0.0.Beta8</version.org.wildfly.jar.plugin>
        <version.javadoc.plugin>3.0.1</version.javadoc.plugin>
    </properties>

    <url>https://resteasy.dev</url>

    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>https://repository.jboss.org/licenses/apache-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git://github.com/resteasy/Resteasy.git</connection>
        <developerConnection>scm:git:git@github.com:resteasy/Resteasy.git</developerConnection>
        <url>https://github.com/resteasy/Resteasy/tree/master/</url>
    </scm>

    <distributionManagement>
        <repository>
            <id>jboss-releases-repository</id>
            <name>JBoss Releases Repository</name>
            <url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <issueManagement>
        <system>JIRA</system>
        <url>https://jira.jboss.com/jira/browse/RESTEASY</url>
    </issueManagement>

    <developers>
        <developer>
            <id>rmcdonough</id>
            <name>Ryan J. McDonough</name>
            <email>ryan@damnhandy.com</email>
            <url>http://damnhandy.com</url>
            <roles>
                <role>project-owner</role>
            </roles>
            <timezone>-5</timezone>
        </developer>
        <developer>
            <id>patriot1burke</id>
            <name>Bill Burke</name>
            <email>bill@burkecentral.com</email>
            <organization>JBoss</organization>
            <roles>
                <role>project-owner</role>
            </roles>
            <timezone>-5</timezone>
        </developer>
    </developers>

    <profiles>
        <profile>
            <id>resteasy-default</id>
            <activation>
                <property>
                    <name>!resteasy.dependencies.eap</name>
                </property>
            </activation>
            <modules>
                <module>resteasy-dependencies-bom</module>
                <module>tjws</module>
                <module>resteasy-jaxrs</module>
                <module>resteasy-jaxrs-testsuite</module>
                <module>resteasy-client</module>
                <module>resteasy-client-microprofile</module>
                <module>resteasy-client-microprofile-base</module>
                <module>resteasy-client-jetty</module>
                <module>providers</module>
                <module>resteasy-bom</module>
                <module>resteasy-cache</module>
                <module>resteasy-guice</module>
                <module>eagledns</module>
                <module>security</module>
                <module>security-legacy</module>
                <module>resteasy-links</module>
                <module>resteasy-spring</module>
                <module>resteasy-jsapi</module>
                <module>resteasy-cdi</module>
                <module>resteasy-servlet-initializer</module>
                <module>resteasy-rxjava</module>
                <module>resteasy-rxjava2</module>
                <module>server-adapters</module>
                <module>jboss-modules</module>
                <module>resteasy-wadl</module>
                <module>resteasy-wadl-undertow-connector</module>
                <module>arquillian</module>
                <module>profiling-tests</module>
                <module>testsuite</module>
            </modules>
            <dependencyManagement>
                <dependencies>
                    <dependency>
                        <groupId>org.jboss.resteasy</groupId>
                        <artifactId>resteasy-dependencies</artifactId>
                        <version>${project.version}</version>
                        <type>pom</type>
                        <scope>import</scope>
                    </dependency>
                </dependencies>
            </dependencyManagement>
        </profile>
        <profile>
            <id>github-actions</id>
            <activation>
                <property>
                    <name>github.actions</name>
                </property>
            </activation>

            <dependencies>
                <!-- Add explicit dependency to force download of the dependency -->
                <dependency>
                    <groupId>org.apache.maven.surefire</groupId>
                    <artifactId>surefire-junit47</artifactId>
                    <version>${version.surefire.plugin}</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <dependencies>
                            <dependency>
                                <groupId>org.apache.maven.surefire</groupId>
                                <artifactId>surefire-junit47</artifactId>
                                <version>${version.surefire.plugin}</version>
                            </dependency>
                        </dependencies>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>modular-jdk</id>
            <activation>
                <jdk>[9,)</jdk>
            </activation>
            <properties>
                <modular.jdk.args>--add-opens=java.base/java.lang=ALL-UNNAMED</modular.jdk.args>
            </properties>
        </profile>
        <profile>
            <id>Windows</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <properties>
                <surefire.system.args>-Xms512m -Xmx512m -Djdk.io.File.enableADS=true ${modular.jdk.args}</surefire.system.args>
                <additionalJvmArgs>-Djdk.io.File.enableADS=true</additionalJvmArgs>
            </properties>
        </profile>
    </profiles>

    <contributors>
        <contributor>
            <name>Heiko Braun</name>
        </contributor>
        <contributor>
            <name>Martin Algesten</name>
        </contributor>
    </contributors>

    <repositories>
        <repository>
            <id>jboss</id>
            <url>https://repository.jboss.org/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <id>redhat</id>
            <url>https://maven.repository.redhat.com/ga/</url>
        </repository>
    </repositories>
    <pluginRepositories>
    </pluginRepositories>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <forkMode>once</forkMode>
                        <runOrder>reversealphabetical</runOrder>
                        <argLine>${surefire.system.args}</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${version.javadoc.plugin}</version>
                    <configuration>
                        <source>8</source>
                        <minmemory>128m</minmemory>
                        <maxmemory>1024m</maxmemory>
                        <quiet>false</quiet>
                        <aggregate>true</aggregate>
                        <excludePackageNames>
                            com.restfully.*:org.jboss.resteasy.examples.*:se.unlogic.*:org.jboss.resteasy.tests.*:Acme.*:*.tjws.*
                        </excludePackageNames>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.jetty</groupId>
                    <artifactId>jetty-maven-plugin</artifactId>
                    <version>${version.org.eclipse.jetty}</version>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${version.org.jacoco.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.wildfly.plugins</groupId>
                    <artifactId>wildfly-jar-maven-plugin</artifactId>
                    <version>${version.org.wildfly.jar.plugin}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>com.atlassian.maven.plugins</groupId>
                <artifactId>clover-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <executions>
                    <execution>
                        <id>i18n cleanup</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                        <configuration>
                            <excludeDefaultDirectories>true</excludeDefaultDirectories>
                            <filesets>
                                <fileset>
                                    <directory>src/main/resources</directory>
                                    <includes>
                                        <include>org/**</include>
                                    </includes>
                                </fileset>
                            </filesets>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${version.checkstyle.plugin}</version>
                <configuration>
                    <configLocation>checkstyle.xml</configLocation>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <excludes>**/*$logger.java,**/*$bundle.java</excludes>
                    <useFile/>
                </configuration>
                <executions>
                    <execution>
                        <id>check-style</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>checkstyle</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${version.enforcer.plugin}</version>
                <executions>
                    <execution>
                        <id>ban-bad-dependencies</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <bannedDependencies>
                                    <searchTransitive>true</searchTransitive>
                                    <excludes>
                                        <exclude>javax.activation:activation</exclude>
                                        <exclude>javax.activation:javax.activation-api</exclude>
                                        <exclude>javax.enterprise:cdi-api</exclude>
                                        <exclude>javax.inject:javax.inject</exclude>
                                        <exclude>javax.json:javax.json-api</exclude>
                                        <exclude>javax.persistence:javax.persistence-api</exclude>
                                        <exclude>javax.persistence:persistence-api</exclude>
                                        <exclude>javax.security.enterprise:javax.security.enterprise-api</exclude>
                                        <exclude>javax.transaction:jta</exclude>
                                        <exclude>javax.validation:validation-api</exclude>
                                        <exclude>javax.xml:jaxrpc-api</exclude>
                                        <exclude>javax.xml.bind:jaxb-api</exclude>
                                        <exclude>javax.xml.soap:saaj-api</exclude>
                                        <exclude>javax.xml.stream:stax-api</exclude>
                                    </excludes>
                                </bannedDependencies>
                            </rules>
                        </configuration>
                    </execution>
                    <execution>
                        <id>use-java-8-for-release</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[1.8,9)</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>${version.jxr.plugin}</version>
            </plugin>
        </plugins>
    </reporting>
</project>
